--- a/BrowserTabManager/MainWindow.xaml
+++ b/BrowserTabManager/MainWindow.xaml
@@ -86,9 +86,13 @@
                     </TextBox>
                 </StackPanel>
                 <StackPanel Orientation="Horizontal" Grid.Column="2" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="8,8,8,0">
-                    <Label Content="Rows" VerticalAlignment="Center" Margin="0,0,4,0" />
-                    <Button x:Name="btnAddRowToFramesGrid" Content="+" Width="15" Height="15" Background="Transparent" Click="btnAddRowToFramesGrid_Click" VerticalContentAlignment="Center" Padding="0,0,0,1" />
-                    <Button x:Name="btnSubtractRowFromFramesGrid" Content="-" Width="15" Height="15" Background="Transparent" Click="btnSubtractRowFromFramesGrid_Click" VerticalContentAlignment="Center" Padding="0,0,0,1" />
+                    <Label Content="Rows" VerticalAlignment="Center" Margin="0,0,0,2" />
+                    <Button x:Name="btnAddRowToFramesGrid" Width="15" Height="15" Background="Transparent" Click="btnAddRowToFramesGrid_Click" VerticalContentAlignment="Center" Padding="0,0,0,0" ToolTip="Add Row">
+                        <Image Source="pack://application:,,,/Plus.png" Stretch="Uniform" VerticalAlignment="Center" HorizontalAlignment="Center"/>
+                    </Button>
+                    <Button x:Name="btnSubtractRowFromFramesGrid" Width="15" Height="15" Background="Transparent" Click="btnSubtractRowFromFramesGrid_Click" VerticalContentAlignment="Center" Padding="0,0,0,0" ToolTip="Remove Row" Margin="2,0,0,0">
+                        <Image Source="pack://application:,,,/Minus.png" Stretch="Uniform" VerticalAlignment="Center" HorizontalAlignment="Center"/>
+                    </Button>
                 </StackPanel>
             </Grid>
             <Grid x:Name="FramesGrid" Grid.Row="1" Grid.Column="0" Margin="0,4,0,0">
@@ -133,7 +137,7 @@
                 </TextBox>
             </StackPanel>
             <ScrollViewer x:Name ="TabScroll" Grid.Row="1" VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Disabled">
-                <StackPanel x:Name="TabStack"  Orientation="Vertical" />
+                <StackPanel x:Name="TabStack"  Orientation="Vertical"  />
             </ScrollViewer>
         </Grid>
     </Grid>
