--- a/BrowserTabManager/MainWindow.xaml
+++ b/BrowserTabManager/MainWindow.xaml
@@ -88,10 +88,10 @@
                 <StackPanel Orientation="Horizontal" Grid.Column="2" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="8,8,8,0">
                     <Label Content="Rows" VerticalAlignment="Center" Margin="0,0,0,2" />
                     <Button x:Name="btnAddRowToFramesGrid" Width="15" Height="15" Background="Transparent" Click="btnAddRowToFramesGrid_Click" VerticalContentAlignment="Center" Padding="0,0,0,0" ToolTip="Add Row">
-                        <Image Source="pack://application:,,,/Plus.png" Stretch="Uniform" VerticalAlignment="Center" HorizontalAlignment="Center"/>
+                        <Image Source="pack://application:,,,/Icons/Plus.png" Stretch="Uniform" VerticalAlignment="Center" HorizontalAlignment="Center"/>
                     </Button>
                     <Button x:Name="btnSubtractRowFromFramesGrid" Width="15" Height="15" Background="Transparent" Click="btnSubtractRowFromFramesGrid_Click" VerticalContentAlignment="Center" Padding="0,0,0,0" ToolTip="Remove Row" Margin="2,0,0,0">
-                        <Image Source="pack://application:,,,/Minus.png" Stretch="Uniform" VerticalAlignment="Center" HorizontalAlignment="Center"/>
+                        <Image Source="pack://application:,,,/Icons/Minus.png" Stretch="Uniform" VerticalAlignment="Center" HorizontalAlignment="Center"/>
                     </Button>
                 </StackPanel>
             </Grid>
