--- a/BrowserTabManager/MainWindow.xaml
+++ b/BrowserTabManager/MainWindow.xaml
@@ -6,7 +6,7 @@
         xmlns:local="clr-namespace:BrowserTabManager"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
-    <Grid x:Name="MasterGrid" Margin="0,0,0,0">
+    <Grid x:Name="LowerMasterGrid" Margin="0,0,0,0">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="150" />
             <ColumnDefinition Width="4" />
@@ -64,12 +64,12 @@
         </Grid>
 
         <!-- GridSplitter between Column 0 and 2 -->
-        <GridSplitter Grid.Column="1" Width="4" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" ResizeBehavior="PreviousAndNext" Background="#FFFFFFFF"/>
+        <GridSplitter Grid.Column="1" Width="4" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" ResizeBehavior="PreviousAndNext" Background="#a0b0c1"/>
 
         <!-- Grid in Column 2 with two rows -->
-        <Grid x:Name="FeatureGrid" Grid.Column="2" Grid.Row="0"  Background="#FFFFFFFF">
+        <Grid x:Name="FeatureGrid" Grid.Column="2" Grid.Row="0"  Background="#a0b0c1">
             <Grid.RowDefinitions>
-                <RowDefinition Height="53" />
+                <RowDefinition Height="44" />
                 <RowDefinition Height="*" />
             </Grid.RowDefinitions>
             <Grid x:Name="FeatureBanner" Grid.Row="0"  Margin="0,0,0,4">
@@ -79,22 +79,24 @@
                     <ColumnDefinition Width="Auto" />
                 </Grid.ColumnDefinitions>
                 <StackPanel Orientation="Vertical" Grid.Column="1">
-                    <Label Content="Start Browsing" Foreground="Black" FontSize="12" Margin="0,0,0,0" HorizontalAlignment="Center" />
-                    <TextBox x:Name="txtLaunchUrl" Margin="0,0,0,0" Height="20" MaxWidth="800">
+                    <TextBox x:Name="txtLaunchUrl" Margin="0,10,0,0" Height="25" MaxWidth="800">
+                        <TextBox.Effect>
+                            <DropShadowEffect Color="#616b75" BlurRadius="8" ShadowDepth="2" Opacity="0.4"/>
+                        </TextBox.Effect>
                         <TextBox.Style>
                             <Style TargetType="TextBox">
                                 <Setter Property="Template">
                                     <Setter.Value>
                                         <ControlTemplate TargetType="TextBox">
                                             <Grid>
-                                                <Border CornerRadius="8" Background="{TemplateBinding Background}" BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="1">
+                                                <Border CornerRadius="12" Background="{TemplateBinding Background}" BorderBrush="#616b75" BorderThickness="0">
                                                     <ScrollViewer Margin="0" x:Name="PART_ContentHost"/>
                                                 </Border>
                                                 <ContentControl x:Name="Watermark"
                                                                IsHitTestVisible="False"
-                                                               Content="Enter an internet address or search term"
+                                                               Content="Browse the internet"
                                                                Foreground="#888"
-                                                               Margin="16,0,0,0"
+                                                               Margin="12,4,8,8"
                                                                VerticalAlignment="Center"
                                                                Opacity="0.8"
                                                                Visibility="Collapsed"/>
@@ -108,9 +110,9 @@
                                     </Setter.Value>
                                 </Setter>
                                 <Setter Property="Background" Value="White"/>
-                                <Setter Property="BorderBrush" Value="Gray"/>
-                                <Setter Property="BorderThickness" Value="1"/>
-                                <Setter Property="Padding" Value="8,0,8,0"/>
+                                <Setter Property="BorderBrush" Value="#2196F3"/>
+                                <Setter Property="BorderThickness" Value="2"/>
+                                <Setter Property="Padding" Value="8,3,8,0"/>
                             </Style>
                         </TextBox.Style>
                     </TextBox>
@@ -125,7 +127,7 @@
                     </Button>
                 </StackPanel>
             </Grid>
-            <Grid x:Name="FramesGrid" Grid.Row="1" Grid.Column="0" Margin="0,0,0,0">
+            <Grid x:Name="FramesGrid" Grid.Row="1" Grid.Column="0" Margin="0,0,0,6">
                 <Grid.RowDefinitions>
                     <RowDefinition Height="*" />
                 </Grid.RowDefinitions>
@@ -136,7 +138,7 @@
         </Grid>
 
         <!-- GridSplitter between Column 2 and 4 -->
-        <GridSplitter Grid.Column="3" Width="4" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" ResizeBehavior="PreviousAndNext" Background="#FFFFFFFF"/>
+        <GridSplitter Grid.Column="3" Width="4" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" ResizeBehavior="PreviousAndNext" Background="#a0b0c1"/>
 
         <!-- Grid in Column 4 with two rows -->
         <Grid x:Name="TabGrid" Grid.Column="4" Background="#E2E6EC">
@@ -144,9 +146,16 @@
                 <RowDefinition Height="Auto" />
                 <RowDefinition Height="*" />
             </Grid.RowDefinitions>
-            <StackPanel Grid.Row="0" Orientation="Vertical">
-                <Label Content="Open Tabs" Foreground="Black" FontSize="12" Margin="8,0,8,2" HorizontalAlignment="Center" />
-                <TextBox x:Name="txtSearchTabs" Margin="8,0,8,8" Height="20">
+            <Grid x:Name="SearchHeaderGrid" Grid.Row="0">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="Auto" />
+                </Grid.RowDefinitions>
+                <StackPanel x:Name ="SearchHeaderGridRow0" Orientation="Horizontal" HorizontalAlignment="Center" Grid.Row="0">
+                    <Button x:Name="HideTabListButton" Content="Hide" Margin="0,0,8,0" />
+                    <Button x:Name="OrganizeTabsButton" Content="Manage" />
+                </StackPanel>
+                <TextBox x:Name="txtSearchTabs" Margin="8,0,8,8" Height="20" Grid.Row="1">
                     <TextBox.Style>
                         <Style TargetType="TextBox">
                             <Setter Property="Template">
@@ -158,7 +167,7 @@
                                             </Border>
                                             <ContentControl x:Name="Watermark"
                                                            IsHitTestVisible="False"
-                                                           Content="Search Open Tabs"
+                                                           Content="Search Tabs"
                                                            Foreground="#888"
                                                            Margin="16,0,0,0"
                                                            VerticalAlignment="Center"
@@ -180,7 +189,7 @@
                         </Style>
                     </TextBox.Style>
                 </TextBox>
-            </StackPanel>
+            </Grid>
             <ScrollViewer x:Name ="TabScroll" Grid.Row="1" VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Disabled" Background="#E2E6EC">
                 <StackPanel x:Name="TabStack"  Orientation="Vertical" Background="#E2E6EC" />
             </ScrollViewer>
