--- a/BrowserTabManager/MainWindow.xaml
+++ b/BrowserTabManager/MainWindow.xaml
@@ -10,6 +10,7 @@
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
             <RowDefinition Height="*" />
+            <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
         <Grid x:Name="UpperMasterGrid" Grid.Row="0" Background="#E2E6EC">
             <Grid.ColumnDefinitions>
@@ -25,35 +26,80 @@
                     <ColumnDefinition Width="Auto" />
                     <ColumnDefinition Width="*" />
                 </Grid.ColumnDefinitions>
-                <Button x:Name="ManageBookmarksButton" Content="Mng" Background="Transparent" Grid.Column="0" />
-                <Button x:Name="ShowHideBookmarksButton" Content="Bookmarks" Margin="4,0,0,0" Background="Transparent" Grid.Column="1" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" />
+                <Button x:Name="ManageBookmarksButton" Content="Mng" Background="#f5f5f5" BorderBrush="#b0b0b0" BorderThickness="1" Padding="6,2" Margin="2,2,0,2" Grid.Column="0" HorizontalAlignment="Left" VerticalAlignment="Center" />
+                <Button x:Name="ShowHideBookmarksButton" Content="Bookmarks" Margin="4,0,0,0" Background="#f5f5f5" BorderBrush="#b0b0b0" BorderThickness="1" Padding="10,2" Grid.Column="1" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" />
             </Grid>
-            <!-- Center StackPanel -->
-            <StackPanel Orientation="Horizontal" Grid.Column="2" HorizontalAlignment="Center" Margin="0,2,0,2">
-                <Button x:Name="HistoryButton" Content="History" Margin="0,0,4,0" Background="Transparent" />
-                <Button x:Name="ScreensButton" Content="Screens" Margin="0,0,4,0" Background="Transparent" />
-                <StackPanel x:Name="ManageRowsPanel" Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0,0,0,0">
-                    <Button x:Name="btnSubtractRowFromFramesGrid" Width="15" Height="15" Background="Transparent" Click="btnSubtractRowFromFramesGrid_Click" VerticalContentAlignment="Center" Padding="0,0,0,0" ToolTip="Remove Row" Margin="2,0,0,0">
-                        <Image Source="pack://application:,,,/Icons/Minus.png" Stretch="Uniform" VerticalAlignment="Center" HorizontalAlignment="Center"/>
-                    </Button>
-                    <Label Content="Rows" VerticalAlignment="Center" Margin="0,0,0,2" />
-                    <Button x:Name="btnAddRowToFramesGrid" Width="15" Height="15" Background="Transparent" Click="btnAddRowToFramesGrid_Click" VerticalContentAlignment="Center" Padding="0,0,0,0" ToolTip="Add Row">
-                        <Image Source="pack://application:,,,/Icons/Plus.png" Stretch="Uniform" VerticalAlignment="Center" HorizontalAlignment="Center"/>
-                    </Button>
-                </StackPanel>
-                <Button x:Name="NewTabButton" Content="New Tab" Background="Transparent" />
+            <!-- Launch URL StackPanel -->
+            <StackPanel Orientation="Horizontal" Grid.Column="2" VerticalAlignment="Center" Margin="0,0,0,0">
+                <TextBox x:Name="txtLaunchUrl" Margin="16,4,8,4" Height="28" Width="260" VerticalAlignment="Center" FontSize="14" Padding="8,0,8,0" Background="White" BorderBrush="#CCC" BorderThickness="1">
+                    <TextBox.Style>
+                        <Style TargetType="TextBox">
+                            <Setter Property="Template">
+                                <Setter.Value>
+                                    <ControlTemplate TargetType="TextBox">
+                                        <Grid>
+                                            <Border CornerRadius="14" Background="{TemplateBinding Background}" BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="1">
+                                                <ScrollViewer Margin="0" x:Name="PART_ContentHost"/>
+                                            </Border>
+                                            <ContentControl x:Name="Watermark"
+                                                           IsHitTestVisible="False"
+                                                           Content="Search the internet"
+                                                           Foreground="#888"
+                                                           Margin="16,0,0,0"
+                                                           VerticalAlignment="Center"
+                                                           Opacity="0.8"
+                                                           Visibility="Collapsed"/>
+                                        </Grid>
+                                        <ControlTemplate.Triggers>
+                                            <Trigger Property="Text" Value="">
+                                                <Setter TargetName="Watermark" Property="Visibility" Value="Visible"/>
+                                            </Trigger>
+                                        </ControlTemplate.Triggers>
+                                    </ControlTemplate>
+                                </Setter.Value>
+                            </Setter>
+                            <Setter Property="Background" Value="White"/>
+                            <Setter Property="BorderBrush" Value="#CCC"/>
+                            <Setter Property="BorderThickness" Value="1"/>
+                            <Setter Property="Padding" Value="8,0,8,0"/>
+                        </Style>
+                    </TextBox.Style>
+                </TextBox>
+                <Button x:Name="NewTabButton" Content="New Tab" Margin="4,4,0,4" Height="28" MinWidth="70" VerticalAlignment="Center">
+                    <Button.Template>
+                        <ControlTemplate TargetType="Button">
+                            <Border CornerRadius="14" Background="{TemplateBinding Background}" BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="1">
+                                <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                            </Border>
+                        </ControlTemplate>
+                    </Button.Template>
+                </Button>
+                <Button x:Name="NewScreenButton" Content="New Screen" Margin="4,4,0,4" Height="28" MinWidth="90" VerticalAlignment="Center">
+                    <Button.Template>
+                        <ControlTemplate TargetType="Button">
+                            <Border CornerRadius="14" Background="{TemplateBinding Background}" BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="1">
+                                <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                            </Border>
+                        </ControlTemplate>
+                    </Button.Template>
+                </Button>
             </StackPanel>
             <!-- Tabs StackPanel -->
-            <Grid x:Name="ShowTabListGrid" Grid.Column="4" Margin="0,2,4,2" >
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="*" />
-                    <ColumnDefinition Width="Auto" />
-                </Grid.ColumnDefinitions>
-                <Button x:Name="ShowHideTabListButton" Content="Tab List" Margin="0,0,4,0" Background="Transparent" Grid.Column="0" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" />
-                <Button x:Name="ManageTabListButton" Content="Mng" Background="Transparent" Grid.Column="1" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" />
-            </Grid>
+            <Border x:Name="ShowTabListBorder" Grid.Column="4" Background="#f5f5f5" BorderBrush="#b0b0b0" BorderThickness="1" Padding="0" Margin="0,1,2,1">
+                <Border.Effect>
+                    <DropShadowEffect Color="Black" BlurRadius="8" ShadowDepth="2" Opacity="0.2"/>
+                </Border.Effect>
+                <Grid x:Name="ShowTabListGrid"  Margin="0,0,0,0" >
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="*" />
+                        <ColumnDefinition Width="Auto" />
+                    </Grid.ColumnDefinitions>
+                    <Button x:Name="ShowHideTabListButton" Content="Tab List" Margin="0,0,0,0" Background="Transparent" BorderThickness="0" Grid.Column="0" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" HorizontalContentAlignment="Left" Padding="10,0,0,0" />
+                    <Button x:Name="ManageTabListButton" Content="Mng" Background="Transparent" BorderThickness="0" Grid.Column="1" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" />
+                </Grid>
+            </Border>
         </Grid>
-        <Grid x:Name="LowerMasterGrid" Grid.Row="1" Margin="0,0,0,0">
+        <Grid x:Name="CenterMasterGrid" Grid.Row="1" Margin="0,0,0,0">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="150" />
                 <ColumnDefinition Width="4" />
@@ -71,6 +117,9 @@
                 <StackPanel Grid.Row="0" Orientation="Vertical">
 
                     <TextBox x:Name="txtSearchBookmarks" Margin="8,5,8,5" Height="20">
+                        <TextBox.Effect>
+                            <DropShadowEffect Color="Black" BlurRadius="6" ShadowDepth="1" Opacity="0.18"/>
+                        </TextBox.Effect>
                         <TextBox.Style>
                             <Style TargetType="TextBox">
                                 <Setter Property="Template">
@@ -114,59 +163,13 @@
             <GridSplitter Grid.Column="1" Width="4" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" ResizeBehavior="PreviousAndNext" Background="#a0b0c1"/>
 
             <!-- Grid in Column 2 with two rows -->
-            <Grid x:Name="FeatureGrid" Grid.Column="2" Grid.Row="0"  Background="#a0b0c1">
+            <Grid x:Name="FeatureGrid" Grid.Column="2" Grid.Row="0"  Background="#a0b0c1" ClipToBounds="False">
                 <Grid.RowDefinitions>
-                    <RowDefinition Height="44" />
                     <RowDefinition Height="*" />
+                    <RowDefinition Height="Auto" />
                 </Grid.RowDefinitions>
-                <Grid x:Name="FeatureBanner" Grid.Row="0"  Margin="0,0,0,4">
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="100" />
-                        <ColumnDefinition Width="197*" />
-                        <ColumnDefinition Width="109*"/>
-                        <ColumnDefinition Width="Auto" />
-                    </Grid.ColumnDefinitions>
-                    <StackPanel Orientation="Vertical" Grid.Column="1" Grid.ColumnSpan="2">
-                        <TextBox x:Name="txtLaunchUrl" Margin="0,10,0,0" Height="25" MaxWidth="800">
-                            <TextBox.Effect>
-                                <DropShadowEffect Color="#616b75" BlurRadius="8" ShadowDepth="2" Opacity="0.4"/>
-                            </TextBox.Effect>
-                            <TextBox.Style>
-                                <Style TargetType="TextBox">
-                                    <Setter Property="Template">
-                                        <Setter.Value>
-                                            <ControlTemplate TargetType="TextBox">
-                                                <Grid>
-                                                    <Border CornerRadius="12" Background="{TemplateBinding Background}" BorderBrush="#616b75" BorderThickness="0">
-                                                        <ScrollViewer Margin="0" x:Name="PART_ContentHost"/>
-                                                    </Border>
-                                                    <ContentControl x:Name="Watermark"
-                                                                   IsHitTestVisible="False"
-                                                                   Content="Browse the internet"
-                                                                   Foreground="#888"
-                                                                   Margin="12,4,8,8"
-                                                                   VerticalAlignment="Center"
-                                                                   Opacity="0.8"
-                                                                   Visibility="Collapsed"/>
-                                                </Grid>
-                                                <ControlTemplate.Triggers>
-                                                    <Trigger Property="Text" Value="">
-                                                        <Setter TargetName="Watermark" Property="Visibility" Value="Visible"/>
-                                                    </Trigger>
-                                                </ControlTemplate.Triggers>
-                                            </ControlTemplate>
-                                        </Setter.Value>
-                                    </Setter>
-                                    <Setter Property="Background" Value="White"/>
-                                    <Setter Property="BorderBrush" Value="#2196F3"/>
-                                    <Setter Property="BorderThickness" Value="2"/>
-                                    <Setter Property="Padding" Value="8,3,8,0"/>
-                                </Style>
-                            </TextBox.Style>
-                        </TextBox>
-                    </StackPanel>
-                </Grid>
-                <Grid x:Name="FramesGrid" Grid.Row="1" Grid.Column="0" Margin="0,0,0,6">
+
+                <Grid x:Name="FramesGrid" Grid.Row="0" Grid.Column="0" Margin="1,5,1,5" Background="#a0b0c1">
                     <Grid.RowDefinitions>
                         <RowDefinition Height="*" />
                     </Grid.RowDefinitions>
@@ -174,6 +177,7 @@
                         <ColumnDefinition Width="*" />
                     </Grid.ColumnDefinitions>
                 </Grid>
+
             </Grid>
 
             <!-- GridSplitter between Column 2 and 4 -->
@@ -230,6 +234,30 @@
                     <StackPanel x:Name="TabStack"  Orientation="Vertical" Background="#E2E6EC" />
                 </ScrollViewer>
             </Grid>
+        </Grid>
+        <Grid x:Name="LowerMasterGrid" Grid.Row="2" Background="#E2E6EC">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="150" />
+                <ColumnDefinition Width="*" />
+                <ColumnDefinition Width="*" />
+                <ColumnDefinition Width="150" />
+            </Grid.ColumnDefinitions>
+            <StackPanel x:Name="ManageRowsPanel" Orientation="Horizontal" Grid.Column="2" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="0,0,7,0" >
+                <Label Content="Rows" Grid.Row="1" VerticalAlignment="Center" Margin="0,0,0,0" Padding="2,2,4,4"/>
+                <Button x:Name="btnSubtractRowFromFramesGrid" Width="15" Height="15" Background="#f5f5f5" BorderBrush="#b0b0b0" BorderThickness="1" Padding="0,0,0,0" ToolTip="Remove Row" Margin="0,0,5,0" VerticalContentAlignment="Center" HorizontalContentAlignment="Center">
+                    <Button.Effect>
+                        <DropShadowEffect Color="Black" BlurRadius="4" ShadowDepth="1" Opacity="0.18"/>
+                    </Button.Effect>
+                    <Image Source="pack://application:,,,/Icons/Minus.png" Stretch="Uniform" VerticalAlignment="Center" HorizontalAlignment="Center"/>
+                </Button>
+                
+                <Button x:Name="btnAddRowToFramesGrid" Width="15" Height="15" Background="#f5f5f5" BorderBrush="#b0b0b0" BorderThickness="1" Padding="0,0,0,0" ToolTip="Add Row" VerticalContentAlignment="Center" HorizontalContentAlignment="Center">
+                    <Button.Effect>
+                        <DropShadowEffect Color="Black" BlurRadius="4" ShadowDepth="1" Opacity="0.18"/>
+                    </Button.Effect>
+                    <Image Source="pack://application:,,,/Icons/Plus.png" Stretch="Uniform" VerticalAlignment="Center" HorizontalAlignment="Center"/>
+                </Button>
+            </StackPanel>
         </Grid>
     </Grid>
 </Window>
