--- a/BrowserTabManager/MainWindow.xaml
+++ b/BrowserTabManager/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:BrowserTabManager"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="MainWindow" Height="450" Width="1000">
     <Grid x:Name="MasterGrid">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
@@ -21,29 +21,24 @@
                 <ColumnDefinition Width="150" />
             </Grid.ColumnDefinitions>
             <!-- Bookmarks Grid -->
-            <Grid x:Name="ShowBookmarksGrid" Grid.Column="0" Margin="4,2,0,2">
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="Auto" />
-                    <ColumnDefinition Width="*" />
-                </Grid.ColumnDefinitions>
-                <Button x:Name="ManageBookmarksButton" Content="Mng" Background="#f5f5f5" BorderBrush="#b0b0b0" BorderThickness="1" Padding="6,2" Margin="2,2,0,2" Grid.Column="0" HorizontalAlignment="Left" VerticalAlignment="Center" />
-                <Button x:Name="ShowHideBookmarksButton" Content="Bookmarks" Margin="4,0,0,0" Background="#f5f5f5" BorderBrush="#b0b0b0" BorderThickness="1" Padding="10,2" Grid.Column="1" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" />
-            </Grid>
+            <Button x:Name="ShowHideBookmarksButton" Content="Bookmarks" Margin="0,0,0,0" Background="#f5f5f5" BorderBrush="#b0b0b0" BorderThickness="1" Padding="10,2" Grid.Column="0" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" />
             <!-- Launch URL StackPanel -->
-            <StackPanel Orientation="Horizontal" Grid.Column="2" VerticalAlignment="Center" Margin="0,0,0,0">
-                <TextBox x:Name="txtLaunchUrl" Margin="16,4,8,4" Height="28" Width="260" VerticalAlignment="Center" FontSize="14" Padding="8,0,8,0" Background="White" BorderBrush="#CCC" BorderThickness="1">
+            <StackPanel Orientation="Horizontal" Grid.Column="2" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0,0,0,0">
+                <Label x:Name="CurrentScreenLabel" Content="Screen" VerticalAlignment="Center" Margin="0,0,5,0"/>
+                <Button x:Name="btnPreviousScreen" Content="Prev" Margin="4,4,0,4" Height="28" MinWidth="70" VerticalAlignment="Center"></Button>
+                <TextBox x:Name="ScreenNameTextBox" Margin="16,4,8,4" Height="28" Width="260" VerticalAlignment="Center" FontSize="14" Padding="8,0,8,0" Background="White" BorderBrush="#CCC" BorderThickness="1">
                     <TextBox.Style>
                         <Style TargetType="TextBox">
                             <Setter Property="Template">
                                 <Setter.Value>
                                     <ControlTemplate TargetType="TextBox">
                                         <Grid>
-                                            <Border CornerRadius="14" Background="{TemplateBinding Background}" BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="1">
+                                            <Border CornerRadius="2" Background="{TemplateBinding Background}" BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="1">
                                                 <ScrollViewer Margin="0" x:Name="PART_ContentHost"/>
                                             </Border>
                                             <ContentControl x:Name="Watermark"
                                                            IsHitTestVisible="False"
-                                                           Content="Search the internet"
+                                                           Content="Give this screen a name"
                                                            Foreground="#888"
                                                            Margin="16,0,0,0"
                                                            VerticalAlignment="Center"
@@ -65,7 +60,8 @@
                         </Style>
                     </TextBox.Style>
                 </TextBox>
-                <Button x:Name="NewTabButton" Content="New Tab" Margin="4,4,0,4" Height="28" MinWidth="70" VerticalAlignment="Center">
+                <Button x:Name="btnNextScreen" Content="Next" Margin="4,4,0,4" Height="28" MinWidth="70" VerticalAlignment="Center"></Button>
+                <Button x:Name="NewTabButton" Content="New Tab" Margin="4,4,0,4" Height="28" MinWidth="70" VerticalAlignment="Center" Background="#f5f5f5" BorderBrush="#b0b0b0" BorderThickness="1">
                     <Button.Template>
                         <ControlTemplate TargetType="Button">
                             <Border CornerRadius="14" Background="{TemplateBinding Background}" BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="1">
@@ -85,17 +81,12 @@
                 </Button>
             </StackPanel>
             <!-- Tabs StackPanel -->
-            <Border x:Name="ShowTabListBorder" Grid.Column="4" Background="#f5f5f5" BorderBrush="#b0b0b0" BorderThickness="1" Padding="0" Margin="0,1,2,1">
-                <Border.Effect>
-                    <DropShadowEffect Color="Black" BlurRadius="8" ShadowDepth="2" Opacity="0.2"/>
-                </Border.Effect>
+            <Border x:Name="ShowTabListBorder" Grid.Column="4" Background="#f5f5f5" BorderBrush="#b0b0b0" BorderThickness="1" Padding="6,2" Margin="0,0,0,0">
                 <Grid x:Name="ShowTabListGrid"  Margin="0,0,0,0" >
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="*" />
-                        <ColumnDefinition Width="Auto" />
                     </Grid.ColumnDefinitions>
-                    <Button x:Name="ShowHideTabListButton" Content="Tab List" Margin="0,0,0,0" Background="Transparent" BorderThickness="0" Grid.Column="0" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" HorizontalContentAlignment="Left" Padding="10,0,0,0" />
-                    <Button x:Name="ManageTabListButton" Content="Mng" Background="Transparent" BorderThickness="0" Grid.Column="1" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" />
+                    <Button x:Name="ShowHideTabListButton" Content="Tab List" Margin="0,0,0,0" Background="Transparent" BorderThickness="0" Grid.Column="0" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" HorizontalContentAlignment="Center" Padding="0,0,0,0" />
                 </Grid>
             </Border>
         </Grid>
@@ -114,7 +105,7 @@
                     <RowDefinition Height="Auto" />
                     <RowDefinition Height="*" />
                 </Grid.RowDefinitions>
-                <StackPanel Grid.Row="0" Orientation="Vertical">
+                <StackPanel x:Name="BookmarkGridSearch" Grid.Row="0" Orientation="Vertical">
 
                     <TextBox x:Name="txtSearchBookmarks" Margin="8,5,8,5" Height="20">
                         <TextBox.Effect>
@@ -195,7 +186,7 @@
                         <RowDefinition Height="Auto" />
                     </Grid.RowDefinitions>
 
-                    <TextBox x:Name="txtSearchTabs" Margin="8,5,8,5" Height="20" Grid.Row="1">
+                    <TextBox x:Name="txtSearchTabs" Margin="8,5,8,5" Height="20" Grid.Row="1" Background="White">
                         <TextBox.Style>
                             <Style TargetType="TextBox">
                                 <Setter Property="Template">
@@ -222,7 +213,6 @@
                                         </ControlTemplate>
                                     </Setter.Value>
                                 </Setter>
-                                <Setter Property="Background" Value="White"/>
                                 <Setter Property="BorderBrush" Value="#CCC"/>
                                 <Setter Property="BorderThickness" Value="1"/>
                                 <Setter Property="Padding" Value="8,0,8,0"/>
