--- a/BrowserTabManager/MainWindow.xaml
+++ b/BrowserTabManager/MainWindow.xaml
@@ -49,7 +49,7 @@
                         <Button x:Name="btnPreviousScreen" ToolTip="Go to Previous Screen" Margin="4,4,0,4" Height="15" Width="24" VerticalAlignment="Center" Padding="0,0,0,0" Background="Transparent" BorderThickness="0">
                             <Image Source="pack://application:,,,/Icons/PrevScreen.png" Stretch="Uniform" VerticalAlignment="Center" HorizontalAlignment="Center"/>
                         </Button>
-                        <Label x:Name="CurrentScreenLabel" Content="Screen" VerticalAlignment="Center" Margin="0,0,0,0" MouseLeftButtonUp="CurrentScreenLabel_MouseLeftButtonUp"/>
+                        <Label x:Name="CurrentScreenLabel" Content="Screen" VerticalAlignment="Center" Margin="0,0,0,0"/>
                         <Button x:Name="btnNextScreen" ToolTip="Go to Next Screen" Margin="0,4,4,4" Height="15" Width="24" VerticalAlignment="Center" Padding="0,0,0,0" Background="Transparent" BorderThickness="0">
                             <Image Source="pack://application:,,,/Icons/NextScreen.png" Stretch="Uniform" VerticalAlignment="Center" HorizontalAlignment="Center"/>
                         </Button>
